# custom_compiler

./: AST_builder.cpp  AST_builder.hpp  CMakeLists.txt  DLX_builder.hpp  IR_builder.hpp  README.md  TEST.txt  TYPE.hpp  abstract_syntax_tree.cpp  abstract_syntax_tree.hpp  instruction.hpp  lex_analyzer.cpp  lex_analyzer.hpp  main.cpp  syntax_error_exception.hpp  temp.hpp  token.hpp
IR_parts/: argument.cpp  argument.hpp  basic_block.cpp  basic_block.hpp  debug.cpp  debug.hpp  instruction.cpp  instruction.hpp
IR_parts/passes/: SSA.hpp
blocks/: block.hpp  body_block.hpp  constant_block.hpp  function_block.hpp  identifier_block.hpp  main_block.hpp  return_block.hpp  var_dec_block.hpp  variable_block.hpp
blocks/statements/: assignment.hpp  end_statement.hpp  function_call.cpp  function_call.hpp  if_statement.cpp  if_statement.hpp  return_statement.hpp  statement.hpp  while_statement.hpp
blocks/statements/rela_pressions/: designator.cpp  designator.hpp  expression.cpp  expression.hpp  factor.cpp  factor.hpp  relation.cpp  relation.hpp  term.cpp  term.hpp
tables/: keyword_table.cpp  keyword_table.hpp  mneumonic_table.hpp  symbol_table.cpp  symbol_table.hpp
test_programs/: test001.txt
